--- a/app/src/main/res/drawable/ball.xml
+++ b/app/src/main/res/drawable/ball.xml
@@ -4,11 +4,14 @@
     android:shape="oval" >
     <gradient
         android:endColor="#783b06"
-        android:gradientRadius="25dp"
+        android:gradientRadius="20dp"
         android:startColor="#ffffff00"
         android:type="radial"
         android:useLevel="false" />
     <size
         android:height="50dp"
         android:width="50dp" />
+    <stroke
+        android:width="1dp"
+        android:color="#0b0b0b" />
 </shape>
