--- a/app/src/main/res/drawable/ball2.xml
+++ b/app/src/main/res/drawable/ball2.xml
@@ -3,12 +3,15 @@
     android:dither="true"
     android:shape="oval" >
     <gradient
-        android:endColor="#035937"
-        android:gradientRadius="25dp"
-        android:startColor="#769ebf"
+        android:startColor="#d11c0e"
+        android:gradientRadius="20dp"
+        android:endColor="#5c0603"
         android:type="radial"
         android:useLevel="false" />
     <size
         android:height="50dp"
         android:width="50dp" />
+    <stroke
+        android:width="1dp"
+        android:color="#0b0b0b" />
 </shape>
