--- a/app/src/main/res/drawable/block4.xml
+++ b/app/src/main/res/drawable/block4.xml
@@ -5,9 +5,9 @@
     <corners
         android:radius="5dp" />
     <gradient
-        android:endColor="#5c0603"
+        android:endColor="#031966"
         android:gradientRadius="20dp"
-        android:startColor="#d11c0e"
+        android:startColor="#0726ef"
         android:type="radial"
         android:useLevel="false" />
     <size
