--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="#ffff"
     tools:context="com.ryanraba.angular_obsession.FullscreenActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
@@ -14,10 +14,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="#1f4e06"
+        android:textColor="#050505"
         android:text="High Scores" />
 
     <ListView
@@ -30,8 +30,8 @@
         android:layout_above="@+id/start_button"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginBottom="50dp"
         android:textAlignment="center" />
 
     <Button
