--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -19,8 +19,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:layout_gravity="top|left"
         android:layout_marginLeft="5dp"
-        android:paddingTop="2dp"
+        android:layout_marginTop="4dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:background="@drawable/scoreline"
         android:text="0" />
+
+    <ProgressBar
+        android:id="@+id/turnTracker"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_gravity="top|right"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/scoreline"/>
 
 </FrameLayout>
