--- a/app/src/main/res/layout/text_list_item.xml
+++ b/app/src/main/res/layout/text_list_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="34dp"
+    android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
-    android:textSize="16sp"
     android:textColor="#030303"
+    android:minHeight="1dp"
     android:gravity="center_vertical|center_horizontal"
     android:background="@drawable/scoreline"
     android:textStyle="normal">
